# stm32-tflm-mnist

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Src/: bsp.h  clock.h  gpio.h  main.cc  main_functions.cc  main_functions.h  model_data.cc  model_data.h  offline_model.cc  offline_model.h  sdcard.cc  sdcard.h
Src/disco_f413zh/: bsp.cc  bsp.h  clock.cc  clock.h  ffconf.h  gpio.h  main.h  sd_diskio.cc  sd_diskio.h  sdcard.cc  sdcard.h  stm32f4xx_hal_conf.h  stm32f4xx_it.cc  stm32f4xx_it.h  ts_calibration.cc  ts_calibration.h  usart.cc  usart.h
Src/disco_f769ni/: bsp.cc  clock.cc  clock.h  ffconf.h  gpio.cc  gpio.h  main.h  sd_diskio.h  sdcard.cc  stm32f7xx_hal_conf.h  stm32f7xx_it.cc  stm32f7xx_it.h  ts_calibration.cc  ts_calibration.h  usart.cc  usart.h
Src/misc/: audio_playback.cc  audio_playback.h  benchmarking.cc  benchmarking.h  image_show.cc  image_show.h  misc.cc  misc.h  syscalls.c  sysmem.cc
media/: README.md  convert_mnist_dataset.py
models/compiler/: README.md  offline_model.cc  offline_model.cc.h
models/interpreter/: MNIST_full_quanitization.cc  README.md
models/ipynb/: MNIST_TFLM_Example_for_STM32.ipynb  README.md
models/other/: MNIST_full_quanitization.tflite  MNIST_model_no_optimizations.tflite  MNIST_optimized_for_size.tflite  MNIST_pruned.tflite  README.md
